--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
         with:
           type: 'zip'
           filename: 'release.zip'
-          path: '/Assets /.vscode'
+          path: './Assets ./.vscode'
 
       - name: Create GitHub Release
         uses: actions/create-release@v1
