--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,8 +34,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: HASH
-          release_name: HASH
+          tag_name: 0.1
+          release_name: 0.1
 
       - name: Upload Release
         uses: actions/upload-release-asset@v1
