--- a/.github/workflows/CI_Create_Release.yml
+++ b/.github/workflows/CI_Create_Release.yml
@@ -35,7 +35,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          release_name: ${{ github.ref_name }}
+          tag_name: ${{ github.ref_name }}
+          release_name: Release ${{ github.ref_name }}
 
       - name: Upload Release
         uses: actions/upload-release-asset@v1
